--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
 
 /* Global Styles */
 :root {
-  --primary-color: #dc3545;
-  --dark-color: #333333;
+  --primary-color: #2d333b;
+  --dark-color: #22272e;
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
   --success-color: #28a745;
@@ -19,7 +19,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fff;
+  background-color: #22272e;
   color: #333;
 }
 
@@ -29,7 +29,7 @@ a {
 }
 
 a:hover {
-  color: #666;
+  color: #539bf5;
 }
 
 ul {
@@ -40,9 +40,13 @@ img {
   width: 100%;
 }
 
+.user-img {
+  width: 100px;
+}
+
 /* Utilities */
 .container {
-  max-width: 1100px;
+  max-width: 1600px;
   margin: auto;
   overflow: hidden;
   padding: 0 2rem;
@@ -111,9 +115,15 @@ img {
 
 /* Cards */
 .card {
+  background-color: #2d333b;
   padding: 1rem;
-  border: #ccc 1px dotted;
+  border: #414952 2px solid;
+  border-radius: 0.5rem;
   margin: 0.7rem 0;
+}
+
+.card h3 {
+  color: #537ca8;
 }
 
 /* List */
@@ -266,7 +276,7 @@ img {
 .badge-dark,
 .alert-dark {
   background: var(--dark-color);
-  color: #fff;
+  color: #cdd9e5;
 }
 
 .btn-danger,
@@ -354,8 +364,14 @@ table th {
   padding: 0.7rem 2rem;
   z-index: 1;
   width: 100%;
-  opacity: 0.9;
+  /* opacity: 0.9; */
   margin-bottom: 1rem;
+}
+
+.navbar h1 {
+  color: #cdd9e5;
+  font-size: 2rem;
+  font-weight: 400;
 }
 
 .navbar ul {
