--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* Global Styles */
 :root {
   --primary-color: #2d333b;
-  --dark-color: #22272e;
+  --secondary-color: #537ca8;
+  --highlight-color: #539bf5;
+  --dark-color: #1e2227;
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
   --success-color: #28a745;
@@ -97,19 +99,19 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  font-size: 1rem;
+  font-size: 1.2rem;
   line-height: 1.6;
   background-color: #22272e;
-  color: #333;
+  color: #757575;
 }
 
 a {
-  color: var(--primary-color);
+  color: #cdd9e5;
   text-decoration: none;
 }
 
 a:hover {
-  color: #539bf5;
+  color: var(--highlight-color);
 }
 
 ul {
@@ -121,7 +123,11 @@ img {
 }
 
 .user-img {
-  width: 100px;
+  width: 7.5rem;
+}
+
+.user-imgLG {
+  width: 14rem;
 }
 
 /* Utilities */
@@ -158,6 +164,14 @@ img {
   color: var(--primary-color);
 }
 
+.text-secondary {
+  color: var(--secondary-color);
+}
+
+.text-highlight {
+  color: var(--highlight-color);
+}
+
 .text-dark {
   color: var(--dark-color);
 }
@@ -182,6 +196,10 @@ img {
   text-align: left;
 }
 
+.text-bold {
+  font-weight: 900;
+}
+
 /* Center All */
 .all-center {
   display: flex;
@@ -199,11 +217,10 @@ img {
   padding: 1rem;
   border: #414952 2px solid;
   border-radius: 0.5rem;
-  margin: 0.7rem 0;
 }
 
 .card h3 {
-  color: #537ca8;
+  color: var(--secondary-color);
 }
 
 /* List */
@@ -292,7 +309,7 @@ img {
   color: #333;
   padding: 0.4rem 1.3rem;
   font-size: 1.2rem;
-  font-weight: 200;
+  font-weight: 400;
   border: none;
   border-radius: 0.3rem;
   cursor: pointer;
@@ -320,7 +337,7 @@ img {
 
 .badge {
   display: inline-block;
-  font-size: 0.8rem;
+  font-size: 1rem;
   padding: 0.2rem 0.7rem;
   text-align: center;
   margin: 0.3rem;
@@ -343,6 +360,12 @@ img {
 .alert-primary {
   background: var(--primary-color);
   color: #cdd9e5;
+}
+
+.btn-primary:hover {
+  color: var(--highlight-color);
+  background-color: #1e2227;
+  transition: 0.25s;
 }
 
 .btn-light,
@@ -394,9 +417,9 @@ img {
   border: #ccc solid 1px;
 }
 
-.btn:hover {
+/* .btn:hover {
   opacity: 0.8;
-}
+} */
 
 .bg-light,
 .badge-light {
@@ -409,6 +432,7 @@ img {
 
 /* Forms */
 
+/* disabled for testing */
 input {
   margin: 1.2rem 0;
 }
@@ -419,6 +443,7 @@ input {
   color: #888;
 }
 
+/* disabled for testing */
 input[type='text'],
 input[type='email'],
 input[type='password'],
@@ -434,8 +459,9 @@ textarea {
   border: #414952 2px solid;
   border-radius: 0.3rem;
 }
+
 /* couldn't get this to work right */
-/* input:-webkit-autofill,
+input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 textarea:-webkit-autofill,
@@ -444,17 +470,31 @@ textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
-  border: 2px solid #000000;
   -webkit-text-fill-color: #cdd9e5;
-  -webkit-box-shadow: 0 0 0px 1000px #22272e inset;
+  -webkit-box-shadow: 0 0 0 100% #22272e inset;
   transition: background-color 5000s ease-in-out 0s;
+}
+
+/* disabled for testing */
+/* input[type='text']:active {
+  border-color: #539be9;
 } */
 
-input[type='text'] table th,
+/* .border-customized-input {
+  border: 5px solid red;
+} */
+
+/* disabled for testing */
+/* .input:-webkit-autofill:focus {
+  border: 2px solid #eee;
+} */
+
+/* disabled for testing */
+/* input[type='text'] table th,
 table td {
   padding: 1rem;
   text-align: left;
-}
+} */
 
 table th {
   background: var(--light-color);
@@ -483,13 +523,13 @@ table th {
 }
 
 .navbar a {
-  color: #fff;
+  color: #cdd9e5;
   padding: 0.45rem;
   margin: 0 0.25rem;
 }
 
 .navbar a:hover {
-  color: var(--light-color);
+  color: var(--highlight-color);
 }
 
 .navbar .welcome span {
@@ -531,4 +571,9 @@ table th {
     text-align: center;
     justify-content: center;
   }
+}
+
+.usersGrid {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
