--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,7 @@
 ::-webkit-scrollbar-button:single-button:vertical:increment:active {
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(128, 128, 128)'><polygon points='0,0 100,0 50,50'/></svg>");
 }
+*/
 /* Left */
 ::-webkit-scrollbar-button:single-button:horizontal:decrement {
   height: 12px;
@@ -576,4 +577,8 @@ table th {
 .usersGrid {
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+.repo {
+  margin-bottom: 1rem;
 }
