--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 16px;
+  width: 1rem;
 }
 ::-webkit-scrollbar-corner,
 ::-webkit-scrollbar-track {
@@ -44,7 +44,6 @@
 ::-webkit-scrollbar-button:single-button:active {
   background-color: #575757;
 }
-/* Up */
 ::-webkit-scrollbar-button:single-button:vertical:decrement {
   height: 12px;
   width: 16px;
@@ -57,7 +56,6 @@
 ::-webkit-scrollbar-button:single-button:vertical:decrement:active {
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(128, 128, 128)'><polygon points='50,00 0,50 100,50'/></svg>");
 }
-/* Down */
 ::-webkit-scrollbar-button:single-button:vertical:increment {
   height: 12px;
   width: 16px;
@@ -70,8 +68,6 @@
 ::-webkit-scrollbar-button:single-button:vertical:increment:active {
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(128, 128, 128)'><polygon points='0,0 100,0 50,50'/></svg>");
 }
-*/
-/* Left */
 ::-webkit-scrollbar-button:single-button:horizontal:decrement {
   height: 12px;
   width: 12px;
@@ -84,7 +80,6 @@
 ::-webkit-scrollbar-button:single-button:horizontal:decrement:active {
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(128, 128, 128)'><polygon points='0,50 50,100 50,0'/></svg>");
 }
-/* Right */
 ::-webkit-scrollbar-button:single-button:horizontal:increment {
   height: 12px;
   width: 12px;
@@ -432,10 +427,14 @@ img {
 }
 
 /* Forms */
-
-/* disabled for testing */
 input {
   margin: 1.2rem 0;
+}
+
+input[type='search']:focus {
+  outline: none;
+  border: 2px solid var(--secondary-color);
+  border-radius: 0.3rem;
 }
 
 .form-text {
@@ -444,8 +443,8 @@ input {
   color: #888;
 }
 
-/* disabled for testing */
 input[type='text'],
+input[type='search'],
 input[type='email'],
 input[type='password'],
 input[type='date'],
@@ -460,42 +459,6 @@ textarea {
   border: #414952 2px solid;
   border-radius: 0.3rem;
 }
-
-/* couldn't get this to work right */
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover,
-textarea:-webkit-autofill:focus,
-select:-webkit-autofill,
-select:-webkit-autofill:hover,
-select:-webkit-autofill:focus {
-  -webkit-text-fill-color: #cdd9e5;
-  -webkit-box-shadow: 0 0 0 100% #22272e inset;
-  transition: background-color 5000s ease-in-out 0s;
-}
-
-/* disabled for testing */
-/* input[type='text']:active {
-  border-color: #539be9;
-} */
-
-/* .border-customized-input {
-  border: 5px solid red;
-} */
-
-/* disabled for testing */
-/* .input:-webkit-autofill:focus {
-  border: 2px solid #eee;
-} */
-
-/* disabled for testing */
-/* input[type='text'] table th,
-table td {
-  padding: 1rem;
-  text-align: left;
-} */
 
 table th {
   background: var(--light-color);
